<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F781F3"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/contacts"
        android:textColor="#140718"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/username_txt"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/username"
            android:textColor="#140718" />

        <EditText
            android:id="@+id/username_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/namehint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/password_txt"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="#140718" />

        <EditText
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/paswordhint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/email_txt"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="#140718" />

        <EditText
            android:id="@+id/email_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/emailhint"
            android:inputType="textWebEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/phone_txt"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/phone"
            android:textColor="#140718" />

        <EditText
            android:id="@+id/phone_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phonehint"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="#140718" />

        <Button
            android:id="@+id/show_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/show"
            android:textColor="#140718" />
    </LinearLayout>

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="100sp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/edit"
        android:textColor="#140718" />

</LinearLayout>