<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F781F3"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/contacts"
        android:textColor="#140718"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/email_txt"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="#140718" />

        <EditText
            android:id="@+id/validate_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/emailhint"
            android:inputType="textWebEmailAddress" />
    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:text="@string/submit"
        android:textColor="#140718" />

</LinearLayout>